# fTetWild

./: .clang-format  CMakeLists.txt
cmake/ftetwild/: ftetwild_add_application.cmake  ftetwild_filter_flags.cmake  ftetwild_use_colors.cmake  ftetwild_warnings.cmake
cmake/recipes/: catch2.cmake  cli11.cmake  fast_envelope.cmake  libigl.cmake  sanitizer.cmake
src/: main.cpp
src/floattetwild/: AABBWrapper.h  CMakeLists.txt  CutMesh.cpp  EdgeCollapsing.cpp  EdgeSplitting.cpp  EdgeSwapping.cpp  FloatTetDelaunay.cpp  FloatTetwild.cpp  LocalOperations.cpp  LocalOperations.h  Mesh.hpp  MeshIO.cpp  MeshImprovement.cpp  Parameters.h  Simplification.cpp  Statistics.h  TriangleInsertion.cpp  TriangleInsertion.h  VertexSmoothing.cpp  intersections.cpp
tests/: CMakeLists.txt  test_predicates.cpp  test_subdivision.cpp  test_table.cpp
